--- a/kernal/inventory_result.html
+++ b/kernal/inventory_result.html
@@ -105,7 +105,7 @@
 							<td class="Receipt itemno" style="padding: 0 0 0 4em" colspan = "5">
                                 <u> IMEI: </u> </br>
                                 {% for serial in inStockRecord.serialno_set.select_related %}
-                                    {{serial.serial_no}} </br>
+                                    {{serial.serial_no|IMEIOnly}} </br>
                                 {% endfor %}
                             </td>
                             {% endif %}
