--- a/kernal/bill.html
+++ b/kernal/bill.html
@@ -179,6 +179,10 @@ th,td{
 				<td colspan="5" id="bill_detail">
                 {% block bill_detail %}
 					<table>   
+                        <thead>
+                        {% block extra_cost%}
+                        <div align=left id="AppendExtraCost">[+<a href="/sales/extra_cost/{{bill.pk}}"> Append Extra Cost </a>]</div>
+                        {% endblock %}                    
 						  <tr>        
 							<td colspan="5" class="border-bottom"></td>    
 						  </tr>   
@@ -191,7 +195,9 @@ th,td{
 						  </tr>    
 						  <tr>        
 							<td colspan="5" class="border-top"></td>    
-						  </tr>    
+						  </tr>   
+                        </thead>                          
+                        <tbody>
 						{% for outStockRecord in outStockRecordset.object_list %}
 							{{record}}
 							<tr>
@@ -201,7 +207,10 @@ th,td{
 							<td align="right" class="price">{{outStockRecord.unit_sell_price}}</td>
 							<td align="right" class="price">{{outStockRecord.amount}}</td>
 							</tr>
-						{% endfor %}			  
+						{% endfor %}
+                        </tbody>
+                        {% block extra_cost_detail%}
+                        {% endblock %}     
 					</table>				
                 {% endblock %}
 				</td>
@@ -225,6 +234,13 @@ th,td{
                 <td  align="right" class="summary" >            Disc         </td>        
                 <td align="right" class="summary" >            {{bill.discount}}       </td>    
               </tr>            
+              <tr>        
+				<td  align="right" class="summary" >            </td>        			  
+				<td  align="right" class="summary" >            </td>        
+				<td  align="right" class="summary" >            </td>        
+                <td  align="right" class="summary" >            Deposit         </td>        
+                <td align="right" class="summary" >            {{bill.deposit_price}}       </td>    
+              </tr>                          
               <tr>        
 				<td  align="right" class="summary" >            </td>        			  
                 <td align="right" class="summary" >                     </td>        
@@ -257,11 +273,16 @@ th,td{
                 <tr>
                 <form action="/bill/void/" id="void_bill_form">
                 <input type="hidden" name="bill_id" value="{{bill.pk}}"/>
-                <table style="border: solid black 1px; width: 30%; background-color: #CCC">
+                <table id="void_bill_form_table" style="border: solid black 1px; width: 30%; background-color: #CCC">
                     <tr><th colspan=2 style="text-align: center"> Void this Bill</th></tr>
                     {{form}}
                     <tr><td colspan=2><input type="submit" value="VOID" onclick="checkField();return false;"/></td></tr>
                  </table>
+                <table id="complete_invoice" style="border: solid black 1px; width: 30%; background-color: #CCC">
+                    <tr><th colspan=2 style="text-align: center"> Complete Invoice </th></tr>
+                    {{form}}
+                    <tr><td colspan=2><input type="submit" value="VOID" onclick="checkField();return false;"/></td></tr>
+                 </table>					
                  </form>
                  </tr>
                  <script type="text/javascript">
