--- a/kernal/sales.html
+++ b/kernal/sales.html
@@ -23,6 +23,9 @@
          <ol>
             <li><a href="/sales/list/">Cash Sale</a></li>
 			<li><a href="/invoice/list/">Invoice</a></li>
+			 <li><a href="/deposit/add/">Deposit</a></li>
+             <li><a href="/service/add/">Service</a></li>
+             <li><a href="/repair/add/">Repair</a></li>
          </ol>
       </li>
       <li>Bills
@@ -30,6 +33,9 @@
             <li><a href="/search/cashsales/">Receipt</a></li>
 			<li><a href="/search/invoice/">Invoice and Delivery Order</a></li>
             <li><a href="/search/imei/">IMEI Search</a></li>
+            <li><a href="/search/deposit/">Deposit</a></li>
+            <li><a href="/search/service/">Service</a></li>
+            <li><a href="/search/repair/">Repair</a></li>
          </ol>
       </li>	  
    </ol>
