--- a/kernal/search_deposit.html
+++ b/kernal/search_deposit.html
@@ -2,7 +2,7 @@
 
 {% block searchField %}		  		
 			<div><span class="date"><label for="id_start_date">Start Date: </label> </span><span class="date"> <input id="id_start_date" type="text" class="vDateField" name="start_date" size="10"/> </span><span class="date"> <label for="id_end_date">End Date: </label> </span><span class="date"> <input id="id_end_date" type="text" class="vDateField" name="end_date" size="10"/></span></div> 		
-            <label id="item_label" for="item">    Customer Name: 
+            <label id="item_label" for="item">    Deposit No / HandBill No / Customer Name: 
             </label>  
             <input type="text" name="item" value="" id="item" size="40" onclick="return false;"/>
 {% endblock %}		  			
@@ -10,14 +10,18 @@
 {% block table_head %}		  
             <thead>  
               <tr>  
-                <th style="width:auto">Sale ID
+                <th style="width:auto">Deposit ID
                 </th>  
+                <th style="width:auto">Ref.Bill ID
+                </th>				  
                 <th style="width:auto">Date
                 </th>  
-                <th style="width:15%;">Type
+                <th style="width:15%;">Customer
                 </th>  
-                <th style="width:15%;">Status
+                <th style="width:15%;">Price
                 </th>  
+                <th style="width:15%;">Description
+                </th>				  
               </tr>  
             </thead>  
 {% endblock %}	
@@ -25,10 +29,12 @@
 			{% if object_list %}
 				{% for result in object_list %}
                 <tr>
-                <td><a href="/sales/{{display}}/{{result.pk}}">{{result.pk}}</a></td>
+                <td><a href="/sales/{% if result.type == 'Cash Sales'%}bill{% else %}{{result.type}}{% endif %}/{{result.pk}}">{{result.pk}}</a></td>
+                <td>{{result.refBill}}</td>
                 <td>{{result.create_at}}</td>
-                <td>{{result.type}}</td>
-                <td><a href='/sales/invoice/completed/{{result.pk}}'>{{result.status}}</a></td>
+                <td>{{result.customer}}</td>
+                <td>{{result.price}}</td>
+                <td>{{result.description}}</td>					
                 </tr>					
 				{% endfor %}
 			{% endif %}
@@ -78,9 +84,11 @@
         row = ""+
                 "<tr>"+
                 "<td><a href=\"/sales/{{display}}/"+data.pk+"\">"+data.pk+"</a></td>"+
+                "<td>"+data.fields.refBill+"</td>"+
                 "<td>"+data.fields.create_at+"</td>"+
-                "<td>"+data.fields.type+"</td>"+
-                "<td><a href='/sales/invoice/completed/"+data.pk+"'>"+data.fields.status+"</a></td>"+
+                "<td>"+data.fields.customer+"</td>"+
+                "<td>"+data.fields.price+"</td>"+
+                "<td>"+data.fields.description+"</td>"+                
                 "</tr>"
         ;    
         return row;
