--- a/kernal/stock_base.html
+++ b/kernal/stock_base.html
@@ -296,7 +296,11 @@
     function calcTotalPrice(){
         subTotal = $("#subTotal").val();
         discount = $("#discount").val();
-        $("#total").attr("value", (subTotal-discount));
+        deposit =  $("#deposit").val();
+        if(deposit == undefined){
+            deposit = 0
+        }
+        $("#total").attr("value", (subTotal-discount-deposit));
     }
     function calcChange(){
         total = $("#total").val();
