--- a/branches/AZ/kernal/inventory_result.html
+++ b/branches/AZ/kernal/inventory_result.html
@@ -96,6 +96,7 @@
                                     total = roundNumber({{inStockRecord.cost}}*{{inStockRecord.quantity}}, 2)
                                     document.write(total)
                                     sub_total += total;
+                                    sub_total = roundNumber(sub_total, 2)
                                 </script>
                             </td>
 							</tr>
