--- a/kernal/report_dailySales_by_category.html
+++ b/kernal/report_dailySales_by_category.html
@@ -16,6 +16,22 @@
 .innertable {
 	display: none;
 }
+.container {
+    margin: 0 1em 0 1em;
+    width: auto;
+}
+#content_area {
+    float: left;
+    width: auto;
+}
+
+#content_area_wrapper{
+    float: left;
+    width: auto;
+}
+td{
+    text-align:center;
+}
 </style> 
 	<div id="content_area_wrapper">  
       <div id="content_area">  
@@ -35,7 +51,7 @@
               </tr>  		
             </thead>  		
             <tbody>  						
-			{%for date, categorys in dateTable.items %}
+			{%for date, categorys in dateTable %}
               <tr>  				
                 <!-- <td><a href="/sales/bill/{{bill.pk}}" target="_blank">{{date}}</a></td>  -->
                 <td>{{date}}</td> 
