--- a/branches/AZ/kernal/inventory_base.html
+++ b/branches/AZ/kernal/inventory_base.html
@@ -24,7 +24,7 @@
               </option>  			  
               <option value="warranty">Warranty
               </option>
-              <option value="warranty">Pawning
+              <option value="pawning">Pawning
               </option>                
             </select>
           </div>   
