--- a/kernal/report_dailySales_by_category.html
+++ b/kernal/report_dailySales_by_category.html
@@ -1,6 +1,11 @@
 {% extends "product.php.html" %}
 
 
+{% block extrastyle %}
+    <link rel="stylesheet" href="/static/css/screen.css" type="text/css" media="screen, projection">
+    <link rel="stylesheet" href="/static/css/print.css" type="text/css" media="print"><!--[if lt IE 8]><link rel="stylesheet" href="../../blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
+{% endblock %}
+
 {% block content %}   
 <style type="text/css">
 .container {
