--- a/branches/refactory-1.0/kernal/sales_base.html
+++ b/branches/refactory-1.0/kernal/sales_base.html
@@ -40,12 +40,14 @@
                 <th style="width:auto">Item #
                 </th>  
                 <th style="width:auto">Item Name
+                </th> 
+                <th style="width:10%;">Cost
+                </th>                  
+                <th style="width:10%;">Price
                 </th>  
-                <th style="width:11%;">Price
+                <th style="width:5%;">Qty.
                 </th>  
-                <th style="width:11%;">Qty.
-                </th>  
-                <th style="width:15%;">Amount
+                <th style="width:10%;">Amount
                 </th>  
               </tr>  
             </thead> 
@@ -254,7 +256,8 @@
 					"<tr id=\""+pk+"_tr\">"+
 					"<td><a href='#' id='removeItem' onclick=\"removeItem('"+pk+"')\"><img src='/static/images/delete.png' /></a> "+data.fields.barcode+"</td>"+
 					"<td id=\""+pk+"_productName\">["+data.fields.name +"] "+data.fields.description + IMEI_str +"</td>"+    <!-- [<span id=\""+pk+"_stockCount\"></span> in stock]</td>  for batch sales only-->
-					"<td><input type=\"text\" name=\""+pk+"_price\" id=\""+pk+"_price\" value=\""+data.fields.retail_price+"\" size=\"6\" onkeyup=recalcAll('"+pk+"') onblur=lowerCostDetact('"+pk+"'); /></td>"+
+					"<td>"+data.fields.cost+"</td>"+
+                    "<td><input type=\"text\" name=\""+pk+"_price\" id=\""+pk+"_price\" value=\""+data.fields.retail_price+"\" size=\"6\" onkeyup=recalcAll('"+pk+"') onblur=lowerCostDetact('"+pk+"'); /></td>"+
 					"<td><input type=\"text\" name=\""+pk+"_quantity\" id=\""+pk+"_quantity\" value=\"1\" size=\"2\"  onkeyup=recalcAll('"+pk+"') onChange=resetQuantityField('"+pk+"') /></td>"+
 					"<td>$<span id=\""+pk+"_amount\" class='totalPrice'>"+data.fields.retail_price+"</span><input type=\"hidden\" name=\""+pk+"_pk\" id=\""+pk+"_pk\" value=\""+data.pk+"\" /></td>"+
 					"</tr>"
