--- a/kernal/stock_base.html
+++ b/kernal/stock_base.html
@@ -61,10 +61,12 @@
                 <td style="widtd:auto">
                 </td>  
                 <td style="widtd:auto">
+                </td>
+                <td style="widtd:auto">
+                </td>                  
+                <td style="widtd:10%;" id="cost_total">0
                 </td>  
-                <td style="widtd:11%;" id="cost_total">0
-                </td>  
-                <td style="widtd:11%;" id="quantity_total">0
+                <td style="widtd:5%;" id="quantity_total">0
                 </td>  
                 <td style="widtd:15%;">
                 </td>  
@@ -273,7 +275,7 @@
 					"<tr id=\""+pk+"_tr\">"+
 					"<td><a href='#' id='removeItem' onclick=\"removeItem('"+pk+"')\"><img src='/static/images/delete.png' /></a> "+data.fields.barcode+"</td>"+
 					"<td id=\""+pk+"_productName\">["+data.fields.name +"] "+data.fields.description + IMEI_str +"</td>"+    <!-- [<span id=\""+pk+"_stockCount\"></span> in stock]</td>  for batch sales only-->
-					"<td><input type=\"text\" name=\""+pk+"_price\" id=\""+pk+"_price\" value=\""+data.fields.retail_price+"\" size=\"6\" onkeyup=recalcAll('"+pk+"') onblur=lowerCostDetact('"+pk+"'); /></td>"+
+                    "<td><input type=\"text\" name=\""+pk+"_price\" id=\""+pk+"_price\" value=\""+data.fields.retail_price+"\" size=\"6\" onkeyup=recalcAll('"+pk+"') onblur=lowerCostDetact('"+pk+"'); /></td>"+
 					"<td><input type=\"text\" name=\""+pk+"_quantity\" id=\""+pk+"_quantity\" value=\"1\" size=\"2\"  onkeyup=recalcAll('"+pk+"') onChange=resetQuantityField('"+pk+"') /></td>"+
 					"<td>$<span id=\""+pk+"_amount\" class='totalPrice'>"+data.fields.retail_price+"</span><input type=\"hidden\" name=\""+pk+"_pk\" id=\""+pk+"_pk\" value=\""+data.pk+"\" /></td>"+
 					"</tr>"
