--- a/branches/refactory-1.0/kernal/search_gadai.html
+++ b/branches/refactory-1.0/kernal/search_gadai.html
@@ -14,8 +14,6 @@
                 </th>  
                 <th style="width:auto">Date
                 </th>  
-                <th style="width:15%;">Type
-                </th>  
                 <th style="width:15%;">Status
                 </th>  
               </tr>  
@@ -27,7 +25,6 @@
                 <tr>
                 <td><a href="/inventory/result/{{result.pk}}">{{result.pk}}</a></td>
                 <td>{{result.create_at}}</td>
-                <td>{{result.type}}</td>
                 <td>{{result.status}}</td>
                 </tr>					
 				{% endfor %}
@@ -79,8 +76,7 @@
                 "<tr>"+
                 "<td><a href=\"/sales/{{display}}/"+data.pk+"\">"+data.pk+"</a></td>"+
                 "<td>"+data.fields.create_at+"</td>"+
-                "<td>"+data.fields.type+"</td>"+
-                "<td><a href='/sales/invoice/completed/"+data.pk+"'>"+data.fields.status+"</a></td>"+
+                "<td>"+data.fields.status+"</td>"+
                 "</tr>"
         ;    
         return row;
