--- a/kernal/bill.html
+++ b/kernal/bill.html
@@ -201,8 +201,8 @@ th,td{
 						{% for outStockRecord in outStockRecordset.object_list %}
 							{{record}}
 							<tr>
-							<td class="Receipt itemno"> {{forloop.counter}} {{outStockRecord.product.name}}</td>
-							<td class="Receipt">{{outStockRecord.product.description}} {% if  outStockRecord.serial_no.serial_no %}<span style="font-weight: bolder; padding: 0 0 0 1em"> IMEI: {{outStockRecord.serial_no.serial_no}}</span>{% endif %}</td>
+							<td class="Receipt itemno"> {{forloop.counter}} {{outStockRecord.product.name|FOCHidden}}</td>
+							<td class="Receipt">{{outStockRecord.product.description|FOCHidden}} {% if  outStockRecord.serial_no.serial_no %}<span style="font-weight: bolder; padding: 0 0 0 1em"> IMEI: {{outStockRecord.serial_no.serial_no}}</span>{% endif %}</td>
 							<td class="right qty">{{outStockRecord.quantity}}</td>
 							<td align="right" class="price">{{outStockRecord.unit_sell_price}}</td>
 							<td align="right" class="price">{{outStockRecord.amount}}</td>
