--- a/kernal/search_service.html
+++ b/kernal/search_service.html
@@ -2,7 +2,7 @@
 
 {% block searchField %}		  		
 			<div><span class="date"><label for="id_start_date">Start Date: </label> </span><span class="date"> <input id="id_start_date" type="text" class="vDateField" name="start_date" size="10"/> </span><span class="date"> <label for="id_end_date">End Date: </label> </span><span class="date"> <input id="id_end_date" type="text" class="vDateField" name="end_date" size="10"/></span></div> 		
-            <label id="item_label" for="item">    IMEI / Deposit No / HandBill No / Customer Name: 
+            <label id="item_label" for="item">    Ref Bill No / Customer Name: 
             </label>  
             <input type="text" name="item" value="" id="item" size="40" onclick="return false;"/>
 {% endblock %}		  			
@@ -10,7 +10,7 @@
 {% block table_head %}		  
             <thead>  
               <tr>  
-                <th style="width:auto">IMEI
+                <th style="width:auto">Bill ID
                 </th>  
                 <th style="width:auto">Ref.Bill ID
                 </th>				  
@@ -18,8 +18,6 @@
                 </th>  
                 <th style="width:auto;">Customer
                 </th>  
-                <th style="width:auto;">Cost
-                </th>                  
                 <th style="width:auto;">Price
                 </th>  
                 <th style="width:auto">Profit
@@ -33,12 +31,11 @@
 			{% if object_list %}
 				{% for result in object_list %}
                 <tr>
-                <td>{{result.pk}}</td>
-                <td>{{result.refBill}}</td>
+                <td><a href="/sales/bill/{{result.pk}}">{{result.pk}}</a></td>
+                <td>{{result.refbill}}</td>
                 <td>{{result.create_at}}</td>
                 <td>{{result.customer}}</td>
-                <td>{{result.cost}}</td>
-                <td>{{result.price}}</td>
+                <td>{{result.total_price}}</td>
                 <td>{{result.profit}}</td>
                 <td>{{result.description}}</td>					
                 </tr>					
@@ -89,12 +86,11 @@
     function _genRowByPK(data){
         row = ""+
                 "<tr>"+
-                "<td>"+data.pk+"</td>"+
-                "<td>"+data.fields.refBill+"</td>"+
+                "<td><a href='/sales/bill/"+data.pk+"'>"+data.pk+"</a></td>"+
+                "<td>"+data.fields.refbill+"</td>"+
                 "<td>"+data.fields.create_at+"</td>"+
                 "<td>"+data.fields.customer+"</td>"+
-                "<td>"+data.fields.cost+"</td>"+
-                "<td>"+data.fields.price+"</td>"+
+                "<td>"+data.fields.total_price+"</td>"+
                 "<td>"+data.fields.profit+"</td>"+
                 "<td>"+data.fields.description+"</td>"+                
                 "</tr>"
