change service job

--- a/branches/refactory-1.0/kernal/report.html
+++ b/branches/refactory-1.0/kernal/report.html
@@ -38,6 +38,15 @@
             <li><a href="/inventory/return/filter/">Inventory Return</a></li>
          </ol>
       </li>            
+      <li>Other Report
+         <ol>
+            <li><a href="/search/gadai">Pawning Report</a></li>
+            <li><a href="/search/void_bill/">Void Bill Report</a></li>
+            <li><a href="/search/close_counter/">Daily Counter Report</a></li>
+            <li><a href="/search/service/">Service Report</a></li>
+            
+         </ol>
+      </li>                  
    </ol>
 </div>
 </div>
