append returncost handle serialno function append ProductRealCost handle serialno fix bug ConsignmentOut check b4 submit fix bug BarnOwl._calc_last_index

--- a/branches/refactory-1.0/kernal/stock_base.html
+++ b/branches/refactory-1.0/kernal/stock_base.html
@@ -269,7 +269,7 @@
             type: "JSON",
             success: function(data){ 
             
-                     var pk_cost = "#"+queryStr+"_avgcost";
+                     var pk_cost = "#"+queryStr.split('/')[1]+"_avgcost";
 
                   $(pk_cost).html(data[0].Cost);
                   
