--- a/branches/refactory-1.0/kernal/report.html
+++ b/branches/refactory-1.0/kernal/report.html
@@ -52,8 +52,8 @@
          <ol>
             <li><a href="/report/commission/newhp/filter/">New Handphone</a></li>
             <li><a href="/report/commission/2ndhp/filter/">2nd Handphone</a></li>
-            <li><a href="/report/commission/gadai/filter/">Gadai</a></li>
-            <li><a href="/report/commission/acc/filter/">Acc</a></li>
+            <li><a href="/report/commission/gadai/filter/">Pawning</a></li>
+            <li><a href="/report/commission/acc/filter/">Accessories</a></li>
             
          </ol>
       </li>          
