--- a/kernal/bill.html
+++ b/kernal/bill.html
@@ -40,11 +40,11 @@ tfoot td {
 }
 
 #CompanyProfile .address{
-	font-size: 10pt;
+	font-size: 12pt;
 }
 
 #CompanyProfile .contect span{
-	font-size: 10pt;
+	font-size: 12pt;
 	margin: 0 1.5em 0 0;
 }
 
@@ -179,6 +179,10 @@ th,td{
 				<td colspan="5" id="bill_detail">
                 {% block bill_detail %}
 					<table>   
+                        <thead>
+                        {% block extra_cost%}
+                        <div align=left id="AppendExtraCost">[+<a href="/sales/extra_cost/{{bill.pk}}"> Append Extra Cost </a>]</div>
+                        {% endblock %}                    
 						  <tr>        
 							<td colspan="5" class="border-bottom"></td>    
 						  </tr>   
@@ -191,17 +195,22 @@ th,td{
 						  </tr>    
 						  <tr>        
 							<td colspan="5" class="border-top"></td>    
-						  </tr>    
+						  </tr>   
+                        </thead>                          
+                        <tbody>
 						{% for outStockRecord in outStockRecordset.object_list %}
 							{{record}}
 							<tr>
-							<td class="Receipt itemno"> {{forloop.counter}} {{outStockRecord.product.name}}</td>
-							<td class="Receipt">{{outStockRecord.product.description}} {% if  outStockRecord.serial_no.serial_no %}<span style="font-weight: bolder; padding: 0 0 0 1em"> IMEI: {{outStockRecord.serial_no.serial_no}}</span>{% endif %}</td>
+							<td class="Receipt itemno"> {{forloop.counter}} {{outStockRecord.product.name|FOCHidden}}</td>
+							<td class="Receipt">{{outStockRecord.product.description|FOCHidden}} {% if  outStockRecord.serial_no.serial_no %}<span style="font-weight: bolder; padding: 0 0 0 1em"> IMEI: {{outStockRecord.serial_no.serial_no}}</span>{% endif %}</td>
 							<td class="right qty">{{outStockRecord.quantity}}</td>
 							<td align="right" class="price">{{outStockRecord.unit_sell_price}}</td>
 							<td align="right" class="price">{{outStockRecord.amount}}</td>
 							</tr>
-						{% endfor %}			  
+						{% endfor %}
+                        </tbody>
+                        {% block extra_cost_detail%}
+                        {% endblock %}     
 					</table>				
                 {% endblock %}
 				</td>
@@ -225,6 +234,13 @@ th,td{
                 <td  align="right" class="summary" >            Disc         </td>        
                 <td align="right" class="summary" >            {{bill.discount}}       </td>    
               </tr>            
+              <tr>        
+				<td  align="right" class="summary" >            </td>        			  
+				<td  align="right" class="summary" >            </td>        
+				<td  align="right" class="summary" >            </td>        
+                <td  align="right" class="summary" >            Deposit         </td>        
+                <td align="right" class="summary" >            {{bill.deposit_price}}       </td>    
+              </tr>                          
               <tr>        
 				<td  align="right" class="summary" >            </td>        			  
                 <td align="right" class="summary" >                     </td>        
@@ -257,7 +273,7 @@ th,td{
                 <tr>
                 <form action="/bill/void/" id="void_bill_form">
                 <input type="hidden" name="bill_id" value="{{bill.pk}}"/>
-                <table style="border: solid black 1px; width: 30%; background-color: #CCC">
+                <table id="void_bill_form_table" style="border: solid black 1px; width: 30%; background-color: #CCC">
                     <tr><th colspan=2 style="text-align: center"> Void this Bill</th></tr>
                     {{form}}
                     <tr><td colspan=2><input type="submit" value="VOID" onclick="checkField();return false;"/></td></tr>
