--- a/kernal/search_close_counter.html
+++ b/kernal/search_close_counter.html
@@ -14,9 +14,9 @@
                 </th>  
                 <th style="width:auto">Date
                 </th>  
-                <th style="width:15%;">Type
+                <th style="width:15%;">Initial Amount
                 </th>  
-                <th style="width:15%;">Status
+                <th style="width:15%;">Closing Amount
                 </th>  
               </tr>  
             </thead>  
@@ -25,10 +25,10 @@
 			{% if object_list %}
 				{% for result in object_list %}
                 <tr>
-                <td><a href="/sales/{{display}}/{{result.pk}}">{{result.pk}}</a></td>
+                <td><a href="/inventory/result/{{result.pk}}">{{result.pk}}</a></td>
                 <td>{{result.create_at}}</td>
-                <td>{{result.type}}</td>
-                <td><a href='/sales/invoice/completed/{{result.pk}}'>{{result.status}}</a></td>
+                <td>{{result.initail_amount}}</td>
+                <td>{{result.close_amount}}</td>
                 </tr>					
 				{% endfor %}
 			{% endif %}
