--- a/kernal/search_gadai.html
+++ b/kernal/search_gadai.html
@@ -2,7 +2,7 @@
 
 {% block searchField %}		  		
 			<div><span class="date"><label for="id_start_date">Start Date: </label> </span><span class="date"> <input id="id_start_date" type="text" class="vDateField" name="start_date" size="10"/> </span><span class="date"> <label for="id_end_date">End Date: </label> </span><span class="date"> <input id="id_end_date" type="text" class="vDateField" name="end_date" size="10"/></span></div> 		
-            <label id="item_label" for="item">    Customer Name: 
+            <label id="item_label" for="item">    IMEI: 
             </label>  
             <input type="text" name="item" value="" id="item" size="40" onclick="return false;"/>
 {% endblock %}		  			
@@ -14,8 +14,6 @@
                 </th>  
                 <th style="width:auto">Date
                 </th>  
-                <th style="width:15%;">Type
-                </th>  
                 <th style="width:15%;">Status
                 </th>  
               </tr>  
@@ -25,10 +23,9 @@
 			{% if object_list %}
 				{% for result in object_list %}
                 <tr>
-                <td><a href="/sales/{{display}}/{{result.pk}}">{{result.pk}}</a></td>
+                <td><a href="/inventory/result/{{result.pk}}">{{result.pk}}</a></td>
                 <td>{{result.create_at}}</td>
-                <td>{{result.type}}</td>
-                <td><a href='/sales/invoice/completed/{{result.pk}}'>{{result.status}}</a></td>
+                <td>{{result.status}}</td>
                 </tr>					
 				{% endfor %}
 			{% endif %}
@@ -77,10 +74,9 @@
     function _genRowByPK(data){
         row = ""+
                 "<tr>"+
-                "<td><a href=\"/sales/{{display}}/"+data.pk+"\">"+data.pk+"</a></td>"+
+                "<td><a href=\"/inventory/result/"+data.pk+"\">"+data.pk+"</a></td>"+
                 "<td>"+data.fields.create_at+"</td>"+
-                "<td>"+data.fields.type+"</td>"+
-                "<td><a href='/sales/invoice/completed/"+data.pk+"'>"+data.fields.status+"</a></td>"+
+                "<td>"+data.fields.status+"</td>"+
                 "</tr>"
         ;    
         return row;
